name:           coinbase-pro
version:        0.8.2.1
synopsis:       Client for Coinbase Pro
description:    Client for Coinbase Pro REST and Websocket APIs
category:       Web, Finance
homepage:       https://github.com/mdunnio/coinbase-pro#readme
bug-reports:    https://github.com/mdunnio/coinbase-pro/issues
author:         Michael Dunn <michaelsdunn1@gmail.com>
maintainer:     Michael Dunn <michaelsdunn1@gmail.com>
copyright:      2020 Michael Dunn <michaelsdunn1@gmail.com>
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >=2.0               
                
extra-source-files:
    README.md
    changelog.md

source-repository head
  type: git
  location: https://github.com/mdunnio/coinbase-pro

library
  exposed-modules:
      CoinbasePro.Authenticated
      CoinbasePro.Authenticated.Accounts
      CoinbasePro.Authenticated.API
      CoinbasePro.Authenticated.Fills
      CoinbasePro.Authenticated.Headers
      CoinbasePro.Authenticated.Orders
      CoinbasePro.Authenticated.Request
      CoinbasePro.Environment
      CoinbasePro.Headers
      CoinbasePro.MarketData.AggregateOrderBook
      CoinbasePro.MarketData.FullOrderBook
      CoinbasePro.MarketData.Types
      CoinbasePro.Request
      CoinbasePro.Types
      CoinbasePro.Unauthenticated
      CoinbasePro.Unauthenticated.API
      CoinbasePro.WebSocketFeed
      CoinbasePro.WebSocketFeed.Channel
      CoinbasePro.WebSocketFeed.Channel.Full.Activate
      CoinbasePro.WebSocketFeed.Channel.Full.Change
      CoinbasePro.WebSocketFeed.Channel.Full.Done
      CoinbasePro.WebSocketFeed.Channel.Full.Match
      CoinbasePro.WebSocketFeed.Channel.Full.Open
      CoinbasePro.WebSocketFeed.Channel.Full.Received
      CoinbasePro.WebSocketFeed.Channel.Heartbeat
      CoinbasePro.WebSocketFeed.Channel.Level2
      CoinbasePro.WebSocketFeed.Channel.Status
      CoinbasePro.WebSocketFeed.Channel.Ticker
      CoinbasePro.WebSocketFeed.Request
      CoinbasePro.WebSocketFeed.Response
  other-modules:
      Paths_coinbase_pro
  hs-source-dirs:
      src/lib/
  build-depends:
      base            ^>= 4.14
    , HsOpenSSL       ^>= 0.11
    , aeson           ^>= 1.4.7.1
    , aeson-casing    ^>= 0.2.0.0
    , bytestring      ^>= 0.10
    , containers      ^>= 0.6.2.1
    , cryptonite      ^>= 0.26
    , http-api-data   ^>= 0.4.2
    , http-client     ^>= 0.6.4.1
    , http-client-tls ^>= 0.3.5.3
    , http-types      ^>=0.12.3
    , io-streams      ^>= 1.5.2.0
    , memory          ^>= 0.15
    , network         ^>= 3.0.1.1
    , servant         ^>= 0.18.2
    , servant-client  ^>=0.18.2
    , servant-client-core ^>= 0.18.2
    , text            ^>= 1.2
    , time            ^>= 1.9.3
    , transformers    ^>= 0.5.6.2
    , unagi-streams   ^>= 0.2
    , uuid            ^>= 1.3.13
    , vector          ^>= 0.12.1.2
    , websockets      ^>= 0.12.7.2
    , wuss            ^>= 1.1.17
  default-language: Haskell2010

executable test-request
  main-is: Main.hs
  other-modules:
      Paths_coinbase_pro
  hs-source-dirs:
      src/example/request/
  build-depends:
      base            ^>= 4.14  
    , HsOpenSSL       ^>= 0.11
    , aeson           ^>= 1.4.7.1
    , aeson-casing    ^>= 0.2.0.0
    , bytestring      ^>= 0.10
    , coinbase-pro    ^>= 0.8.2.1
    , containers      ^>= 0.6.2.1
    , cryptonite      ^>= 0.26
    , http-api-data   ^>= 0.4.2
    , http-client     ^>= 0.6.4.1
    , http-client-tls ^>= 0.3.5.3
    , http-types      ^>= 0.12.3
    , io-streams      ^>= 1.5.2.0
    , memory          ^>= 0.15
    , network         ^>= 3.0.1.1
    , servant         ^>= 0.18.2
    , servant-client  ^>= 0.18.2
    , servant-client-core ^>= 0.18.2
    , text            ^>= 1.2
    , time            ^>= 1.9.3
    , transformers    ^>= 0.5.6.2
    , unagi-streams   ^>= 0.2
    , uuid            ^>= 1.3.13
    , vector          ^>= 0.12.1.2
    , websockets      ^>= 0.12.7.2
    , wuss            ^>= 1.1.17
    
  default-language: Haskell2010

executable test-stream
  main-is: Main.hs
  other-modules:
      Paths_coinbase_pro
  hs-source-dirs:
      src/example/stream/
  build-depends:
      base            ^>= 4.14
    , HsOpenSSL       ^>= 0.11
    , aeson           ^>= 1.4.7.1
    , aeson-casing    ^>= 0.2.0.0
    , bytestring      ^>= 0.10
    , coinbase-pro    ^>= 0.8.2.1
    , containers      ^>= 0.6.2.1
    , cryptonite      ^>= 0.26
    , http-api-data   ^>= 0.4.2
    , http-client     ^>= 0.6.4.1
    , http-client-tls ^>= 0.3.5.3
    , io-streams      ^>= 1.5.2.0
    , memory          ^>= 0.15
    , network         ^>= 3.0.1.1
    , servant         ^>= 0.18.2
    , servant-client  ^>= 0.18.2
    , servant-client-core ^>= 0.18.2
    , text            ^>= 1.2
    , time            ^>= 1.9.3
    , transformers    ^>= 0.5.6.2
    , unagi-streams   ^>= 0.2
    , uuid            ^>= 1.3.13
    , vector          ^>= 0.12.1.2
    , websockets      ^>= 0.12.7.2
    , wuss            ^>= 1.1.17
    
  default-language: Haskell2010

executable hexha
  main-is: Main.hs
  other-modules:
      Paths_coinbase_pro
  hs-source-dirs:
      src/hexha/app/
  build-depends:
      base            ^>= 4.14
    , HsOpenSSL       ^>= 0.11
    , aeson           ^>= 1.4.7.1
    , aeson-casing    ^>= 0.2.0.0
    , bytestring      ^>= 0.10
    , coinbase-pro    ^>= 0.8.2.1
    , containers      ^>= 0.6.2.1
    , cryptonite      ^>= 0.26
    , http-api-data   ^>= 0.4.2
    , http-client     ^>= 0.6.4.1
    , http-client-tls ^>= 0.3.5.3
    , io-streams      ^>= 1.5.2.0
    , memory          ^>= 0.15
    , network         ^>= 3.0.1.1
    , servant         ^>= 0.18.2
    , servant-client  ^>= 0.18.2
    , servant-client-core ^>= 0.18.2
    , text            ^>= 1.2
    , time            ^>= 1.9.3
    , transformers    ^>= 0.5.6.2
    , unagi-streams   ^>= 0.2
    , uuid            ^>= 1.3.13
    , vector          ^>= 0.12.1.2
    , websockets      ^>= 0.12.7.2
    , wuss            ^>= 1.1.17
    
  default-language: Haskell2010